WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15025
Background repeat css property is not inherited from parent if unspecified
https://bugs.webkit.org/show_bug.cgi?id=15025
Summary
Background repeat css property is not inherited from parent if unspecified
Brett Wilson (Google)
Reported
2007-08-20 12:52:03 PDT
When the stylesheet of an element provides a background repeat attribute, setting the background image explicitly in the span without specifying repeat will overwrite the old repeat setting with the default. It looks like other browsers (Fx and IE) inherit the background-repeat property in this situation. This has been seen in the wild causing rendering problems.
Attachments
Testcase
(732 bytes, text/html)
2007-08-20 12:52 PDT
,
Brett Wilson (Google)
no flags
Details
First attempt
(7.29 KB, patch)
2007-09-22 12:55 PDT
,
Rob Buis
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brett Wilson (Google)
Comment 1
2007-08-20 12:52:50 PDT
Created
attachment 16037
[details]
Testcase Test case. IE and Firefox render the background image once. WebKit duplicates it.
mitz
Comment 2
2007-08-20 15:20:20 PDT
I think WebKit doesn't parse the property because of url(""). Replacing it with a valid URL yields the expected behavior. Likewise specifying just background-repeat in the style rule behaves as expected.
Rob Buis
Comment 3
2007-09-22 12:55:55 PDT
Created
attachment 16348
[details]
First attempt This should fix it :) Cheers, Rob.
Dave Hyatt
Comment 4
2007-09-22 15:17:06 PDT
Comment on
attachment 16348
[details]
First attempt r=me
Rob Buis
Comment 5
2007-09-23 02:09:04 PDT
Landed in
r25702
.
Mark Rowe (bdash)
Comment 6
2007-09-23 05:57:17 PDT
<
rdar://problem/5499819
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug